# gitinsight-ai

./: .dockerignore  .env.example  .env.prod.example  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/analyzers/: __init__.py  base.py  complexity.py  diagrams.py  docs_gen.py  evidence.py  explain.py  fileset.py  ingest_rag.py  pipeline.py  quality_ruff.py  secret_scan.py  security_bandit.py  structure.py  synthesis.py  tech_detect.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: analyses.py  chat.py  health.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_rag_chat.py
backend/app/models/: __init__.py  analysis.py  base.py  chat.py  chunk.py  finding.py  repository.py
backend/app/repositories/: analysis_repo.py  chat_repo.py  chunk_repo.py  finding_repo.py
backend/app/schemas/: __init__.py  analysis.py  chat.py  finding.py
backend/app/services/: analysis_service.py  clone_service.py  embeddings.py  progress_service.py  rag_service.py  repo_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py  openai_compat.py
backend/app/workers/: celery_app.py  db.py
backend/app/workers/tasks/: analyze.py  ping.py
backend/tests/: test_clone_service.py  test_pipeline.py  test_smoke.py  test_synthesis.py  test_synthesis_stall.py
docs/: ARQUITECTURA.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
infra/caddy/: Caddyfile
infra/docker/: backend.Dockerfile  caddy.Dockerfile  (+2 more)
(+20 files in other folders)
