[project]
name = "gitinsight-backend"
version = "0.1.0"
description = "GitInsight AI — backend (FastAPI + Celery)"
requires-python = ">=3.12"

dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Base de datos
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",

    # Colas
    "celery[redis]>=5.4",
    "redis>=5.2",

    # HTTP (cliente para Ollama / free tier OpenAI-compatible)
    "httpx>=0.27",

    # Análisis (Fase 1)
    "gitpython>=3.1",
    "ruff>=0.8",                  # Fase 1: calidad (también linter del proyecto)
    "bandit>=1.8",                # Fase 1: seguridad
    "radon>=6.0",                 # Fase 1: complejidad ciclomática
    # "tree-sitter>=0.23",        # V1: parseo multi-lenguaje
    "fastembed>=0.4",             # Fase 3: embeddings locales (ONNX en proceso)

    # Utilidades
    "watchfiles>=0.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "flower>=2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Las migraciones Alembic se generan/escriben con un estilo propio.
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI usa llamadas (Depends/Query/Path) en argumentos por defecto de forma idiomática.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
